<resources>
    <string name="app_name">MyLgProject</string>
    <string name="hello_blank_fragment">헬로~ 프레그먼트~</string>

    <string name="home">홈</string>
    <string name="life_record">생기부</string>
    <string name="record">성적</string>
    <string name="calendar">캘린더</string>
    <string name="exam">시험</string>

    <string name="action_home">HOME</string>
    <string name="action_life_record">LIFE_RECORD</string>
    <string name="action_record">RECORD</string>
    <string name="action_calendar">CALENDAR</string>
    <string name="action_exam">EXAM</string>

    <string name="btn">버튼</string>
</resources>