<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/main_frag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_nav"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </FrameLayout>

    <com.kwon.mylgproject.widget.MyNavigationContainer
        android:id="@+id/main_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.kwon.mylgproject.widget.MyNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_width="24"
            app:nv_image_height="24"
            app:nv_image_src="@drawable/bottom_life_record"
            app:nv_text="@string/life_record"
            app:nv_text_style="@style/bottom_nav_text"
            app:nv_action="@string/action_life_record"
            app:nv_able_color="@color/pink"
            app:nv_disable_color="@color/cool_grey"
            />

        <com.kwon.mylgproject.widget.MyNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_width="24"
            app:nv_image_height="24"
            app:nv_image_src="@drawable/bottom_record"
            app:nv_text="@string/record"
            app:nv_text_style="@style/bottom_nav_text"
            app:nv_action="@string/action_record"
            app:nv_able_color="@color/pink"
            app:nv_disable_color="@color/cool_grey"
            />

        <com.kwon.mylgproject.widget.MyNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_width="24"
            app:nv_image_height="24"
            app:nv_image_src="@drawable/bottom_home"
            app:nv_text="@string/home"
            app:nv_text_style="@style/bottom_nav_text"
            app:nv_action="@string/action_home"
            app:nv_able_color="@color/pink"
            app:nv_disable_color="@color/cool_grey"
            />

        <com.kwon.mylgproject.widget.MyNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_width="24"
            app:nv_image_height="24"
            app:nv_image_src="@drawable/bottom_calendar"
            app:nv_text="@string/calendar"
            app:nv_text_style="@style/bottom_nav_text"
            app:nv_action="@string/action_calendar"
            app:nv_able_color="@color/pink"
            app:nv_disable_color="@color/cool_grey"
            />

        <com.kwon.mylgproject.widget.MyNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:nv_image_width="24"
            app:nv_image_height="24"
            app:nv_image_src="@drawable/bottom_exam"
            app:nv_text="@string/exam"
            app:nv_text_style="@style/bottom_nav_text"
            app:nv_action="@string/action_exam"
            app:nv_able_color="@color/pink"
            app:nv_disable_color="@color/cool_grey"
            />


    </com.kwon.mylgproject.widget.MyNavigationContainer>







<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/bottom_nav_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="56dp"-->
<!--        android:background="#ffffff"-->
<!--        android:elevation="30dp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/bottom_nav_life_record_layout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:clickable="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@id/bottom_nav_record_layout"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/bottom_nav_life_record"-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="20dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toTopOf="@id/bottom_nav_life_record_text"-->
<!--                android:background="@drawable/bottom_life_record"-->
<!--                android:backgroundTint="#999999" />-->

<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:id="@+id/bottom_nav_life_record_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/bottom_nav_text"-->
<!--                android:text="@string/life_record"-->
<!--                app:layout_constraintTop_toBottomOf="@id/bottom_nav_life_record"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/bottom_nav_record_layout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:clickable="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@id/bottom_nav_home_layout"-->
<!--            app:layout_constraintStart_toEndOf="@id/bottom_nav_life_record_layout"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/bottom_nav_record"-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="20dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toTopOf="@id/bottom_nav_record_text"-->
<!--                android:background="@drawable/bottom_record"-->
<!--                android:backgroundTint="#999999" />-->

<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:id="@+id/bottom_nav_record_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/bottom_nav_text"-->
<!--                android:text="@string/record"-->
<!--                app:layout_constraintTop_toBottomOf="@id/bottom_nav_record"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/bottom_nav_home_layout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:clickable="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@id/bottom_nav_calendar_layout"-->
<!--            app:layout_constraintStart_toEndOf="@id/bottom_nav_record_layout"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/bottom_nav_home"-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toTopOf="@id/bottom_nav_home_text"-->
<!--                android:background="@drawable/bottom_home"-->
<!--                android:backgroundTint="#333333" />-->

<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:id="@+id/bottom_nav_home_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/bottom_nav_text"-->
<!--                android:text="@string/home"-->
<!--                app:layout_constraintTop_toBottomOf="@id/bottom_nav_home"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/bottom_nav_calendar_layout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:clickable="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@id/bottom_nav_exam_layout"-->
<!--            app:layout_constraintStart_toEndOf="@id/bottom_nav_home_layout"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/bottom_nav_calendar"-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="20dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toTopOf="@id/bottom_nav_calendar_text"-->
<!--                android:background="@drawable/bottom_calendar"-->
<!--                android:backgroundTint="#999999" />-->

<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:id="@+id/bottom_nav_calendar_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/bottom_nav_text"-->
<!--                android:text="@string/calendar"-->
<!--                app:layout_constraintTop_toBottomOf="@id/bottom_nav_calendar"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/bottom_nav_exam_layout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:clickable="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@id/bottom_nav_calendar_layout"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/bottom_nav_exam"-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="20dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toTopOf="@id/bottom_nav_exam_text"-->
<!--                android:background="@drawable/bottom_exam"-->
<!--                android:backgroundTint="#999999" />-->

<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:id="@+id/bottom_nav_exam_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/bottom_nav_text"-->
<!--                android:text="@string/exam"-->
<!--                app:layout_constraintTop_toBottomOf="@id/bottom_nav_exam"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    <View-->
<!--        android:id="@+id/bottom_solid_bar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="#999999"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_layout"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>